--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>Sign Up</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 
@@ -21,38 +21,38 @@
 
 <body>
     <div class="container">
-        <div class="row mt-5">
-            <form action="/post-crud" method="POST">
+        <div class="row mt-5 ml-2 mr-2 ">
+            <form action="/postSignUp" method="POST">
                 <div class="form-row">
                     <div class="col-12">
-                        Create a new user
+                        <b>Create a new user</b>
                     </div>
                     <div class="form-group col-6">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control" name="email">
+                        <input type="email" class="form-control" name="email" />
                     </div>
                     <div class="form-group col-6">
                         <label for="password">Password</label>
-                        <input type="password" class="form-control" name="password">
+                        <input type="password" class="form-control" name="password" />
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-6">
                         <label for="fullName">Full Name</label>
-                        <input type="text" class="form-control" name="fullName">
+                        <input type="text" class="form-control" name="fullName" />
                     </div>
                     <div class="form-group col-6">
                         <label for="phoneNumber">Phone Number</label>
-                        <input type="text" class="form-control" name="phoneNumber">
+                        <input type="text" class="form-control" name="phoneNumber" />
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="address">Address</label>
-                    <input type="text" class="form-control" name="address" placeholder="..., Da Nang">
+                    <input type="text" class="form-control" name="address" placeholder="..., Da Nang" />
                 </div>
                 <div class="form-row">
                     <div class="form-group col-6">
-                        <label for="gender">Sex</label>
+                        <label for="gender">Gender</label>
                         <select name="gender" class="form-control">
                             <option value="1">Male</option>
                             <option value="0">Female</option>
