create api login-getAllUser

--- a/src/views/getUser.ejs
+++ b/src/views/getUser.ejs
@@ -32,7 +32,7 @@
         }
 
         tr:nth-child(even) {
-            background-color: #dddddd;
+            background-color: #f0f2ff;
         }
 
         .action {
@@ -40,6 +40,11 @@
             border: 1px solid #dddddd;
             padding: 0.3rem;
             border-radius: 6px;
+        }
+
+        .action:hover {
+            text-decoration: none;
+            opacity: 0.3;
         }
 
         .edit {
