--- a/src/views/editUser.ejs
+++ b/src/views/editUser.ejs
@@ -39,8 +39,7 @@
                     </div>
                     <div class="form-group col-6">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" name="address" placeholder="..., Da Nang"
-                            value="<%= dataTable.address %>" />
+                        <input type="text" class="form-control" name="address" value="<%= dataTable.address %>" />
                     </div>
                     <div class="form-group col-6">
                         <label for="gender">Gender</label>
